tests/baselines/reference/internalImportUnInstantiatedModuleMergedWithClassNotReferencingInstance.errors.txt
internalImportUnInstantiatedModuleMergedWithClassNotReferencingInstance.ts(2,5): error TS2564: Property 'aProp' has no initializer and is not definitely assigned in the constructor.
internalImportUnInstantiatedModuleMergedWithClassNotReferencingInstance.ts(10,16): error TS2437: Module 'A' is hidden by a local declaration with the same name.


==== internalImportUnInstantiatedModuleMergedWithClassNotReferencingInstance.ts (2 errors) ====
    class A {
        aProp: string;
        ~~~~~
!!! error TS2564: Property 'aProp' has no initializer and is not definitely assigned in the constructor.
    }
    namespace A {
        export interface X { s: string }
    }
    
    namespace B {
        var A = 1;
        import Y = A;
                   ~
!!! error TS2437: Module 'A' is hidden by a local declaration with the same name.
    }
    